Summary of important user-visible changes for Windows 1.2.4+:
------------------------------------------------------------
  ** updated configure files for 4.3+ dev octave

  ** octave_com_object marked as an object in base_value (Bug #51470)

Summary of important user-visible changes for Windows 1.2.4:
------------------------------------------------------------
 
 ** added iscom function

 ** support for returning 1-dimensional and 2-dimensional matrix data from COM objects

 ** updated to remove warning when installing in Octave 4.2

Summary of important user-visible changes for Windows 1.2.3:
------------------------------------------------------------

 ** update function documentation for texinfo.

Summary of important user-visible changes for Windows 1.2.2:
------------------------------------------------------------

 ** Windows package 1.2.2 is a bug fixing release.

 ** allow compile in octave 4.0.0+

 ** add tests for user visisble .m files

Summary of important user-visible changes for Windows 1.2.1:
------------------------------------------------------------

 ** Windows package 1.2.1 is a bug fixing release.

 ** Fix infinite recursion in @octave_com_object/delete.m

 ** Fix incorrect function signatures in @octave_com_object/delete.m
    and @octave_com_object/release.m

Summary of important user-visible changes for Windows 1.2.0:
------------------------------------------------------------

 ** Replace obsolete "dispatch" with regular octave class overload.

 ** Avoid crash on exit when COM objects still exist.